edit intro, focus on other approaches

--- a/manuscript/bib.bib
+++ b/manuscript/bib.bib
@@ -1610,3 +1610,10 @@
   year={2022},
   publisher={Taylor \& Francis}
 }
+@phdthesis{munch2024thesis,
+  title        = {Targeted learning with right-censored data},
+  author       = {Anders Munch},
+  year         = 2024,
+  school       = {University of Copenhagen},
+  type         = {PhD thesis}
+}
