--- a/manuscript/manuscript-wo-appendix.tex
+++ b/manuscript/manuscript-wo-appendix.tex
@@ -246,18 +246,17 @@ the censoring model using IPCW loss functions. However, it seems that this
 procedure is in general not guaranteed to converge to the true data-generating
 mechanism \citep[][Appendix~A.4]{munch2024thesis}.
 
-We introduce our notation and framework in
-Section~\ref{sec:framework}. In Section~\ref{sec:super-learning} we define
-general super learning for right-censored data.
-Section~\ref{sec:super-learner-simple} introduces the state learner, and
-Section~\ref{sec:theor-results-prop} provides theoretical guarantees. In
-Section~\ref{sec:targeted-learning} we discuss the use of the state learner in
-the context of targeted learning. We report results of our numerical experiments
-in Section~\ref{sec:numer-exper} and analyse a prostate cancer data set in
-Section~\ref{sec:real-data-appl}. Section~\ref{sec:discussion} contains a
-discussion of the merits and limitations of our proposal.
-Appendices~\ref{sec:proof-proposition} and~\ref{sec:state-learner-with} contain
-proofs. An implementation of the state learner is available at
+We introduce our notation and framework in Section~\ref{sec:framework}. In
+Section~\ref{sec:super-learning} we define general super learning for
+right-censored data. Section~\ref{sec:super-learner-simple} introduces the state
+learner, and Section~\ref{sec:theor-results-prop} provides theoretical
+guarantees. In Section~\ref{sec:targeted-learning} we discuss the use of the
+state learner in the context of targeted learning. We report results of our
+numerical experiments in Section~\ref{sec:numer-exper} and analyse a prostate
+cancer data set in Section~\ref{sec:real-data-appl}.
+Section~\ref{sec:discussion} contains a discussion of the merits and limitations
+of our proposal. Proof are given in the supplementary material. An
+implementation of the state learner is available at
 \url{https://github.com/amnudn/statelearner} along with codes for reproducing
 our numerical experiments.
 
@@ -661,7 +660,7 @@ equation~(\ref{eq:F-def}) using the measure \( P \in \mathcal{P} \).
   \( t \in [0, \tau]\).
 \end{proposition}
 \begin{proof}
-  See Appendix~\ref{sec:proof-proposition}.
+  See Section~S1 of the Supplementary material.
 \end{proof}
 
 \subsection{Oracle inequalities}
@@ -709,7 +708,7 @@ In the following we let the space \( \mathcal{H}_{\mathcal{P}} \) be equipped wi
   \end{align*}
 \end{corollary}
 \begin{proof}
-  See Appendix~\ref{sec:proof-proposition}.
+  See Section~S2 of the Supplementary material.
 \end{proof}
 
 Corollary~\ref{cor:oracle-prop} has the following asymptotic consequences.
@@ -731,7 +730,7 @@ Corollary~\ref{cor:oracle-prop} has the following asymptotic consequences.
   \end{enumerate}
 \end{corollary}
 \begin{proof}
-  See Appendix~\ref{sec:proof-proposition}.
+  See Section~S2 of the Supplementary material.
 \end{proof}
 
 
@@ -797,42 +796,42 @@ any combinations of \( \Gamma-\hat{\Gamma}_n\),
   uniformly bounded functions \( w^a_n \), \( w^b_n \), \( w^c_n \), and
   \( w^d_n \) with domain \( [0,\tau]^2 \times \mathcal{X} \) such that
   \begin{align*}
-    & P_0{\left[
+    & P{\left[
       \int_0^{\tau} w(s, \blank)
       \left\{
-      \Gamma_0(s,\blank) -\hat{\Gamma}_n(s,\blank)
+      \Gamma(s,\blank) -\hat{\Gamma}_n(s,\blank)
       \right\}
-      [\Lambda_0-\hat{\Lambda}_n]
+      [\Lambda_1-\hat{\Lambda}_{1,n}]
       (\diff s, \blank)
       \right]}
     \\
-    & =
-      P_0{\left[
-      \int_0^{\tau} \int_0^{s} w^a_n(s,u,\blank) [F_0 - \hat{F}_n](u-, 0, \blank)[F_0 - \hat{F}_n](s-, 0, \blank) F_0(\diff u, 2, \blank ) F_0 ( \diff s, 1, \blank)
+     & =
+      P{\left[
+      \int_0^{\tau} \int_0^{s} w^a_n(s,u,\blank) [F - \hat{F}_n](u-, 0, \blank)[F - \hat{F}_n](s-, 0, \blank) F(\diff u, -1, \blank ) F ( \diff s, 1, \blank)
       \right]}
     \\
     & \quad +
-      P_0{\left[
-      \int_0^{\tau} \int_0^{s} w^b_n(s,u,\blank) [F_0 - \hat{F}_n](u-, 0, \blank)
-      F_0(\diff u, 2, \blank ) [F_0 - \hat{F}_n](\diff s, 1, \blank)
+      P{\left[
+      \int_0^{\tau} \int_0^{s} w^b_n(s,u,\blank) [F - \hat{F}_n](u-, 0, \blank)
+      F(\diff u, -1, \blank ) [F - \hat{F}_n](\diff s, 1, \blank)
       \right]}
     \\
     & \quad +
-      P_0{\left[
-      \int_0^{\tau} \int_0^{s} w^c_n(s,u,\blank) [F_0 - \hat{F}_n](\diff u, 2, \blank)
-      [F_0 - \hat{F}_n](s-, 0, \blank)
-      F_0(\diff s, 1, \blank ) 
+      P{\left[
+      \int_0^{\tau} \int_0^{s} w^c_n(s,u,\blank) [F - \hat{F}_n](\diff u, -1, \blank)
+      [F - \hat{F}_n](s-, 0, \blank)
+      F(\diff s, 1, \blank ) 
       \right]}
     \\
     & \quad +
-      P_0{\left[
-      \int_0^{\tau} \int_0^{s} w^d_n(s,u,\blank) [F_0 - \hat{F}_n](\diff u, 2, \blank)
-      [F_0 - \hat{F}_n](\diff s, 1, \blank)
+      P{\left[
+      \int_0^{\tau} \int_0^{s} w^d_n(s,u,\blank) [F - \hat{F}_n](\diff u, -1, \blank)
+      [F - \hat{F}_n](\diff s, 1, \blank)
       \right]}.
   \end{align*}
 \end{proposition}
 \begin{proof}
-  See Appendix~\ref{sec:state-learner-with}.
+  See Section~S3 of the Supplementary material.
 \end{proof}
 
 \section{Targeted learning}
@@ -1424,367 +1423,6 @@ discretisation.
 No competing interest is declared.
 
 \bibliography{bib.bib}
-
-\section{Supplementary material}
-\label{sec:suppl-mater}
-
-This section contains technical proof. Section~\ref{sec:proof-proposition}
-provides proofs of the results stated in Section~\ref{sec:theor-results-prop} of
-the main paper. Section~\ref{sec:state-learner-with} show that a product
-structure is preserved when an estimator $\bar\Psi(\hat{F}_n, \hat{H}_n)$ is
-used instead of $\tilde\Psi(\hat{\Lambda}_n, \hat{\Gamma}_n, \hat{H}_n)$.
-
-
-\appendix
-
-\section{Theoretical guarantees for the state learner}
-\label{sec:proof-proposition}
-
-Define
-\( \bar{B}_{\tau,0}(F, o) = \bar{B}_{\tau}(F, o) - \bar{B}_{\tau}(F_0, o) \) and
-\( R_{0}(F) = P_0{[\bar{B}_{\tau,0}(F, \blank)]} \).
-\begin{lemma}
-  \label{lemma:norm}
-  \( R_{0}(F) = \Vert F - F_0 \Vert_{P_0}^2 \), where \( \Vert \blank \Vert_{P_0}\) is defined
-  in equation~(\ref{eq:norm}).
-\end{lemma}
-\begin{proof}[Proof]
-  For any \( t \in [0, \tau] \) and \( j\in \{-1,0,1,2\} \) we have
-  \begin{align*}
-    & \E_{P_0}{\left[ (F(t, j, X) - \1{\{\eta(t) = j \}})^2 \right]}
-    \\
-    & =    \E_{P_0}{\left[ (F(t, j, X) - F_0(t, j, X) + F_0(t, j, X) - \1{\{\eta(t) = j
-      \}})^2 \right]}
-    \\
-    & =    \E_{P_0}{\left[ (F(t, j, X) - F_0(t, j, X))^2\right]}
-      + \E_{P_0}{\left[ (F_0(t, j, X) - \1{\{\eta(t) = j \}})^2\right]}
-    \\
-    & \quad
-      + 2\E_{P_0}{\left[ (F(t, j, X) - F_0(t, j, X))(F_0(t, j, X) - \1{\{\eta(t) = j
-      \}})\right]}
-    \\
-    & =    \E_{P_0}{\left[ (F(t, j, X) - F_0(t, j, X))^2\right]}
-      + \E_{P_0}{\left[ (F_0(t, j, X) - \1{\{\eta(t) = j \}})^2\right]},
-  \end{align*}
-  where the last equality follows from the tower property. Hence, using Fubini,
-  we have
-  \begin{equation*}
-    P{[\bar{B}_{\tau}(F, \blank)]}
-    = \Vert F - F_0 \Vert_{P_0}^2 + P_0{[\bar{B}_{\tau}(F_0, \blank)]}.
-  \end{equation*}
-\end{proof}
-
-\begin{proof}[Proof of Proposition~\ref{prop:stric-prop}]
-  The result follows from Lemma~\ref{lemma:norm}.
-\end{proof}
-
-Recall that $\mathcal{H}_{\mathcal{P}}$ denote the function space consisting of
-all conditional state occupation probability functions for some measure
-\( P \in \mathcal{P} \).
-
-\begin{proof}[Proof of Corollary~\ref{cor:oracle-prop}]
-  First note that minimising the loss \( \bar{B}_{\tau} \) is equivalent to
-  minimising the loss \( \bar{B}_{\tau,0} \), so the discrete super learner and
-  oracle according to \( \bar{B}_{\tau} \) and \( \bar{B}_{\tau,0} \) are
-  identical. By Lemma~\ref{lemma:norm}, \( R_0(F) \geq 0 \) for any
-  \( F \in \mathcal{H}_{\mathcal{P}} \), and so using Theorem 2.3 from \citep{vaart2006oracle} with
-  \( p=1 \), we have that for all \( \delta >0 \),
-\begin{align*}
-  & \E_{P_0}{\left[ R_0(\hat{\phi}_n(\data_n^{-k})) \right]}
-  \\
-  &  \quad \leq
-    (1+2\delta)\E_{P_0}{\left[ R_0(\tilde{\phi}_n(\data_n^{-k})) \right]}
-  \\
-  & \qquad + (1+\delta) \frac{16 K}{n}
-    \log(1 + |\mathcal{F}_n|)\sup_{F \in \mathcal{H}_{\mathcal{P}}}
-    \left\{
-    M(F) + \frac{v(F)}{R_0(F)}
-    \left(
-    \frac{1}{\delta} + 1
-    \right)
-    \right\}
-\end{align*}
-where for each \( F \in \mathcal{H}_{\mathcal{P}} \), \( (M(F), v(F)) \) is some Bernstein pair for
-the function \(o \mapsto \bar{B}_{\tau,0}(F, o) \). As
-\( \bar{B}_{\tau,0}(F, \blank) \) is uniformly bounded by \( \tau \) for any
-\( F \in \mathcal{H}_{\mathcal{P}} \), it follows from section 8.1 in \citep{vaart2006oracle} that
-\( (\tau, 1.5 P_0{[\bar{B}_{\tau,0}(F, \blank)^2]}) \) is a Bernstein pair for
-\( \bar{B}_{\tau,0}(F, \blank) \). Now, for any \( a,b,c \in \R \) we have
-\begin{align*}
-  (a-c)^2 - (b-c)^2
-  & = (a-b+b-c)^2 - (b-c)^2
-  \\
-  & = (a-b)^2 + (b-c)^2 +2(b-c)(a-b) - (b-c)^2
-  \\
-  & = (a-b)
-    \left\{
-    (a-b) +  2(b-c)
-    \right\}
-  \\
-  & = (a-b)
-    \left\{
-     a + b -2c
-    \right\},
-\end{align*}
-so using this with \( a=F(t, j, x) \), \( b=F_0(t, j, x) \), and
-\( c = \1{\{\eta(t) = j\}} \), we have by Jensen's inequality
-\begin{align*}
-  & P_0{[\bar{B}_{\tau,0}(F, \blank)^2]}
-  \\
-  & \leq
-    2\tau\E_{P_0}{\left[
-    \sum_{j=-1}^{2} \int_0^{\tau}
-    \left\{
-    \left(
-    F(t, j, X) - \1{\{\eta(t) = j\}}
-    \right)^2
-    -
-    \left(
-    F_0(t, j, X) - \1{\{\eta(t) = j\}}
-    \right)^2
-    \right\}^2
-    \diff t 
-    \right]}
-  \\
-  & =2\tau
-    \E_{P_0}\Bigg[
-    \sum_{j=-1}^{2} \int_0^{\tau}
-    \left(
-    F(t, j, X) - F_0(t, j, X)
-    \right)^2
-  \\
-  & \quad \quad \quad\quad \quad \quad \times
-    \left\{
-    F(t, j, X) +  F_0(t, j, X)-2 \1{\{\eta(t) = j\}}
-    \right\}^2
-    \diff t 
-    \Bigg]
-  \\
-  & \leq
-    8\tau \E_{P_0}{\left[
-    \sum_{j=-1}^{2} \int_0^{\tau}
-    \left(
-    F(t, j, X) - F_0(t, j, X)
-    \right)^2
-    \diff t 
-    \right]}.
-  \\
-  & =
-    8\tau \Vert F - F_0 \Vert_{P_0}^2.
-\end{align*}
-Thus when \( v(F) = 1.5 P_0{[\bar{B}_{\tau,0}(F, \blank)^2]} \) we have by
-Lemma~\ref{lemma:norm}
-\begin{equation*}
-  \frac{v(F)}{R_0(F)}
-  = 1.5 \frac{P_0{[\bar{B}_{\tau,0}(F, \blank)^2]}}{P_0{[\bar{B}_{\tau,0}(F, \blank)]}}
-  \leq 12 \tau,
-\end{equation*}
-and so using the Bernstein pairs \( (\tau, 1.5 P_0{[\bar{B}_{\tau,0}(F, \blank)^2]}) \) we have
-\begin{equation*}
-  \sup_{F \in \mathcal{H}_{\mathcal{P}}}
-  \left\{
-    M(F) + \frac{v(F)}{R_0(F)}
-    \left(
-      \frac{1}{\delta} + 1
-    \right)
-  \right\}
-  \leq \tau
-  \left(
-    13 + \frac{12}{\delta}
-  \right),
-\end{equation*}
-For all $\delta>0$ we thus have
-\begin{align*}
-  \E_{P_0}{\left[ R_0(\hat{\phi}_n(\data_n^{-k})) \right]}
-  \leq
-  &(1+2\delta)\E_{P_0}{\left[ R_0(\tilde{\phi}_n(\data_n^{-k})) \right]}
-  \\
-  & \quad
-    + (1+\delta)\log(1 + |\mathcal{F}_n|) \tau \frac{16 K}{n}
-    \left(
-    13 + \frac{12}{\delta}
-    \right),
-\end{align*}
-and then the final result follows from Lemma~\ref{lemma:norm}.
-\end{proof}
-
-\begin{proof}[Proof of Corollary~\ref{cor:asymp-cons}]
-  By definition of the oracle and Lemma~\ref{lemma:norm},
-  \begin{equation*}
-    \E_{P_0}{\left[ \Vert \tilde{\phi}_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2
-      \right]} \leq \E_{P_0}{\left[ \Vert \phi_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2
-      \right]}  
-  \end{equation*}
-  for all \( n \in \N \). The results then follows from
-  Corollary~\ref{cor:oracle-prop}.
-\end{proof}
-
-
-\section{The state learner with targeted learning}
-\label{sec:state-learner-with}
-
-
-\begin{proof}[Proof of Proposition~\ref{prop:dr-structure}]
-  For notational convenience we suppress \( X \) in the following. The final
-  result can be obtained by adding the argument \( X \) to all functions and
-  averaging. We use the relations from equation~(\ref{eq:7}) to write
-  \begingroup %
-  \allowdisplaybreaks
-    \begin{align*}
-      & \int_0^{\tau} w(s) 
-        \left\{
-        \Gamma(s) - \hat{\Gamma}_n(s)
-        \right\}
-        [\Lambda - \hat{\Lambda}_n](\diff s)
-      \\
-      & =
-        \int_0^{\tau} w(s) 
-        \left\{
-        \int_0^s \frac{F(\diff u, 2)}{F(u-, 0)} -
-        \int_0^s \frac{\hat{F}_n(\diff u, 2)}{\hat{F}_n(u-, 0)}  -
-        \right\}
-        \left[
-        \frac{F(\diff s, 1)}{F(s-, 0)}
-        - \frac{\hat{F}_n(\diff s, 1)}{\hat{F}_n(s-, 0)}
-        \right]
-      \\
-      & =
-        \int_0^{\tau} w(s) 
-        \Bigg\{
-        \int_0^s 
-        \left(
-        \frac{1}{F(u-, 0)} -  \frac{1}{\hat{F}_n(u-, 0)}
-        \right) F(\diff u, 2)
-      \\
-      & \qquad\qquad \qquad
-        +
-        \int_0^s \frac{1}{\hat{F}_n(u-, 0)} 
-        \left[
-        F(\diff u, 2) - \hat{F}_n(\diff u, 2)
-        \right]
-        \Bigg\}
-      \\
-      & \qquad\qquad \times
-        \left[
-        \left(
-        \frac{1}{F(s-, 0)} -
-        \frac{1}{\hat{F}_n(s-, 0)}
-        \right)F(\diff s, 1)
-        + \frac{1}{\hat{F}_n(s-, 0)}
-        \left(
-        F(\diff s, 1) -
-        \hat{F}_n(\diff s, 1)
-        \right)
-        \right]
-      \\
-      &
-        = \int_0^{\tau} 
-        \int_0^s
-        w(s) 
-        \left(
-        \frac{1}{F(u-, 0)} -  \frac{1}{\hat{F}_n(u-, 0)}
-        \right) 
-        \left(
-        \frac{1}{F(s-, 0)} -
-        \frac{1}{\hat{F}_n(s-, 0)}
-        \right)F(\diff u, 2)F(\diff s, 1)
-      \\
-      & \quad +
-        \int_0^{\tau}
-        \int_0^s
-        w(s) 
-        \left(
-        \frac{1}{F(u-, 0)} -  \frac{1}{\hat{F}_n(u-, 0)}
-        \right) \frac{F(\diff u, 2) }{\hat{F}_n(u-,0)}
-        \left(
-        F(\diff s, 1) -
-        \hat{F}_n(\diff s, 1)
-        \right)
-      \\
-      & \quad +
-        \int_0^{\tau} 
-        \int_0^s      
-        \frac{w(s) }{\hat{F}_n(u-, 0)} 
-        \left[
-        F(\diff u, 2) - \hat{F}_n(\diff u, 2)
-        \right]
-        \left(
-        \frac{1}{F(s-, 0)} -
-        \frac{1}{\hat{F}_n(s-, 0)}
-        \right)F(\diff s, 1)
-      \\
-      & \quad +
-        \int_0^{\tau} 
-        \int_0^s      
-        \frac{w(s) }{\hat{F}_n(u-, 0)} 
-        \left[
-        F(\diff u, 2) - \hat{F}_n(\diff u, 2)
-        \right]
-        \frac{1}{\hat{F}_n(s-, 0)}
-        \left(
-        F(\diff s, 1) -
-        \hat{F}_n(\diff s, 1)
-        \right).
-    \end{align*}
-    \endgroup %
-    Consider the first term on the right hand side. Defining
-  \begin{equation*}
-    w_n^*(t)  = 
-    \left(
-      F(t-, 0)
-      - \hat{F}_n(t-, 0)
-    \right)
-    \left(
-      \frac{1}{F(t-, 0)}
-      - \frac{1}{\hat{F}_n(t-, 0)}
-    \right),
-  \end{equation*}
-  we can write
-  \begin{align*}
-    & \int_0^{\tau} 
-      \int_0^s
-      w(s) 
-      \left(
-      \frac{1}{F(u-, 0)} -  \frac{1}{\hat{F}_n(u-, 0)}
-      \right)      
-      \left(
-      \frac{1}{F(s-, 0)} -
-      \frac{1}{\hat{F}_n(s-, 0)}
-      \right)F(\diff u, 2)F(\diff s, 1)
-    \\
-    & =
-      \int_0^{\tau} 
-      \int_0^s
-      w(s)
-      w_n^*(u) 
-      \left(
-      F(u-, 0) - \hat{F}_n(u-, 0)
-      \right)
-    \\
-    & \qquad \qquad \quad
-      \times
-      w_n^*(s) 
-      \left(
-      F(s-, 0) - \hat{F}_n(s-, 0)
-      \right)       
-      F(\diff u, 2)F(\diff s, 1)
-    \\
-    & =
-      \int_0^{\tau} 
-      \int_0^s
-      w_n^a(s,u)
-      \left(
-      F(u-, 0) - \hat{F}_n(u-, 0)
-      \right)
-      \left(
-      F(s-, 0) - \hat{F}_n(s-, 0)
-      \right)       
-      F(\diff u, 2)F(\diff s, 1),
-  \end{align*}
-  where we have defined \( w_n^a(s,u) = w(s)w^*_n(s)w^*_n(u) \). By assumption,
-  \( w_n^a(s,u) \) is uniformly bounded. The same approach can be applied to the
-  three remaining terms which gives the result.
-\end{proof}
 
 \end{document}
 
